manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-test-svc
spec:
  selector:
    app: express-test
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
