manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: express-api
spec:
  rules:
    - host: express-api.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: express-test-svc 
              port:
                number: 8080
